# cookiecutter-airflow

./: .pre-commit-config.yaml  README.md  cookiecutter.json  pyproject.toml  tox.ini
.github/workflows/: ci.yml
hooks/: post_gen_project.py
tests/: conftest.py  test_airflow_project.py  test_dag_validation.py  test_generation.py  test_template_rendering.py
{{cookiecutter.project_slug}}/: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  LICENSE.txt  Makefile  README.md  docker-compose.local.yml  pyproject.toml  tox.ini
{{cookiecutter.project_slug}}/.github/workflows/: ci.yml
{{cookiecutter.project_slug}}/airflow/dags/maintainance/: canary.py
{{cookiecutter.project_slug}}/scripts/: setup.sh  setup.sql
{{cookiecutter.project_slug}}/tests/custom_dags/: test_dag_validation.py
